HK: Adjust code for new voting

--- a/organizers/templates/application_detail.html
+++ b/organizers/templates/application_detail.html
@@ -149,9 +149,13 @@
                 <h4 class="text-center">Score</h4>
                 <dl class="dl-horizontal">
                     <dt>Technical Skills</dt>
-                    <dd>{% include 'include/number10.html' with name='tech_rat' %}</dd>
+                    <dd>{% include 'include/number5.html' with name='tech_rat' %}</dd>
                     <dt>Personal Skills</dt>
-                    <dd>{% include 'include/number10.html' with name='pers_rat' %}</dd>
+                    <dd>{% include 'include/number5.html' with name='pers_rat' %}</dd>
+                    <dt>Passion</dt>
+                    <dd>{% include 'include/number5.html' with name='passion_rat' %}</dd>
+                    <dt>Culture</dt>
+                    <dd>{% include 'include/number_cult.html' with name='cult_rat' %}</dd>
                 </dl>
                 <button name="send" class="btn btn-success btn-block" value="send">Send vote</button>
                 <button name="skip" class="btn btn-default btn-block" value="skip">Skip
