HK: Visa invitation letter, comment and required fields

--- a/applications/templates/include/application_form.html
+++ b/applications/templates/include/application_form.html
@@ -4,7 +4,7 @@
 
 <style>
     #id_under_age > div, #id_tshirt_size > div, #id_graduation_year > div, #id_team > div, #id_first_timer > div,
-    #id_scholarship > div, #id_reimb > div {
+    #id_scholarship > div, #id_reimb > div, #id_visas > div {
         display: inline-block;
         padding-right: 20px;
         margin-bottom: 0;
