HK: Improvements in the application form

--- a/applications/templates/include/application_form.html
+++ b/applications/templates/include/application_form.html
@@ -91,6 +91,8 @@
             $('#id_reimb').parent().addClass('required');
             reimb_amout.parent().addClass('required');
 
+            $('#id_visas').parent().addClass('required');
+
             var is_firsttime = $('input[name="first_timer"][value="True"]');
             var experienced = $('input[name="first_timer"][value="False"]');
             var projects = $('#id_projects');
