HK: Minor change in wording

--- a/app/templates/base_email.html
+++ b/app/templates/base_email.html
@@ -164,7 +164,7 @@
 
                                     <span class="apple-link" style="color:#999999;font-size:12px;text-align:center;">You are receiving this because you applied to {{ h_name }}.</span><br>
                                     <span class="apple-link" style="color:#999999;font-size:12px;text-align:center;"> If you think this is a mistake, please send us an email
-                                           at {{ h_contact_email|urlize }}</span>
+                                           to {{ h_contact_email|urlize }}</span>
                                     <table style="padding-top: 20px" cellpadding="0" cellspacing="0" border="0"
                                            align="center">
                                         <tr>
