--- a/applications/templates/include/application_form.html
+++ b/applications/templates/include/application_form.html
@@ -19,7 +19,7 @@
     {% bootstrap_form_errors form %}
     {% for fieldset in form.fieldsets %}
         <fieldset>
-            <h3>{{ fieldset.name }}<br>
+            <h3>{{ fieldset.name }}<small style="color: darkgray; font-style: italic;" class="pull-right saved-string"></small><br>
                 {% if fieldset.description %}
                     <small>{{ fieldset.description }}</small>
                 {% endif %}
@@ -30,13 +30,7 @@
         </fieldset>
     {% endfor %}
     <small><span style="color: red">*</span>Indicates required field</small>
-
     {% if not application or application.can_be_edit %}
-         {% if not application %}
-            <button class="btn btn-info btn-block" type="submit" formaction="{% url 'save_draft' %}" formnovalidate>
-               Save progress
-            </button>
-        {% endif %}
         <button class="btn btn-success btn-block" type="submit">{% if application %}Update application{% else %}
             Submit application{% endif %}</button>
 
@@ -105,6 +99,60 @@
             });
             // Making projects look like required
             projects.parent().addClass('required');
+
+            {% if not application %}
+                var timer;
+                var clear_timer;
+                var timeout = 5000; // Timout duration
+                $('input,textarea').keyup(function () {
+                    if (timer) {
+                        clearTimeout(timer);
+                    }
+                    timer = setTimeout(saveData, timeout);
+
+                });
+                $('input[type=radio],select').change(function () {
+                    if (timer) {
+                        clearTimeout(timer);
+                    }
+                    timer = setTimeout(saveData, timeout);
+
+                });
+
+                // Save data
+                function saveData() {
+                    if (clear_timer) {
+                        clearTimeout(clear_timer);
+                    }
+                    $('.saved-string').html('Saving...');
+                    var o = {};
+                    var a = $('form').serializeArray();
+                    $.each(a, function () {
+                        if (o[this.name]) {
+                            if (!o[this.name].push) {
+                                o[this.name] = [o[this.name]];
+                            }
+                            o[this.name].push(this.value || '');
+                        } else {
+                            o[this.name] = this.value || '';
+                        }
+                    });
+
+
+                    // AJAX request
+                    $.ajax({
+                        url: '{% url 'save_draft' %}',
+                        type: 'post',
+                        data: o,
+                        success: function (response) {
+                            $('.saved-string').html('Saved!');
+                            clear_timer = setTimeout(function () {
+                                $('.saved-string').html('');
+                            }, timeout)
+                        }
+                    });
+                }
+            {% endif %}
         }
     )
 
