HK: Fix tab highlighting

--- a/app/templates/base_tabs.html
+++ b/app/templates/base_tabs.html
@@ -12,9 +12,9 @@
                 <ul class="nav nav-tabs">
                     {% for title,url,needs_action in tabs %}
 
-                        <li role="presentation" {% if url in request.get_full_path %}class="active action"{% endif %}>
+                        <li role="presentation" {% if url == request.get_full_path %}class="active action"{% endif %}>
 
-                            <a {% if url not in request.get_full_path %}href="{{ url }}"{% endif %}>
+                            <a {% if url != request.get_full_path %}href="{{ url }}"{% endif %}>
                                 {{ title }}
                                 {% if needs_action %}
                                     <span class="label label-warning">{{ needs_action }}</span>
