HK: Home page redirect

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -82,7 +82,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand hk-image" href="/">
+                <a class="navbar-brand hk-image" href="https://hackkosice.com/">
                     <img class="hk-image" src="{% static 'img/logo.svg' %}" alt="{{ h_app_name }}" height="50" width="200">
                 </a>
             </div>
