change js variables and fix possible error

--- a/applications/templates/include/application_form.html
+++ b/applications/templates/include/application_form.html
@@ -125,16 +125,16 @@
                         clearTimeout(clear_timer);
                     }
                     $('.saved-string').html('Saving...');
-                    var o = {};
-                    var a = $('form').serializeArray();
-                    $.each(a, function () {
-                        if (o[this.name]) {
-                            if (!o[this.name].push) {
-                                o[this.name] = [o[this.name]];
+                    var form_obj = {};
+                    var form_array = $('form').serializeArray();
+                    $.each(form_array, function () {
+                        if (form_obj[this.name]) {
+                            if (!form_obj[this.name].push) {
+                                form_obj[this.name] = [form_obj[this.name]];
                             }
-                            o[this.name].push(this.value || '');
+                            form_obj[this.name].push(this.value || '');
                         } else {
-                            o[this.name] = this.value || '';
+                            form_obj[this.name] = this.value || '';
                         }
                     });
 
@@ -143,7 +143,7 @@
                     $.ajax({
                         url: '{% url 'save_draft' %}',
                         type: 'post',
-                        data: o,
+                        data: form_obj,
                         success: function (response) {
                             $('.saved-string').html('Saved!');
                             clear_timer = setTimeout(function () {
