--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,8 +8,10 @@
 
     <meta name="theme-color" content="#f8f8f8">
     <meta name="author" content="{{ h_name }}">
-    <link rel="icon" href="{% static 'favicon.png' %}" type="image/png">
     <link rel="icon" href="{% static 'favicon.ico' %}" type="image/x-icon">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon-32x32.png' %}">
+    <link rel="icon" type="image/png" sizes="96x96" href="{% static 'favicon-96x96.png' %}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'favicon-16x16.png' %}">
     <meta name="description" content="{{ h_description }}">
 
 
