--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -94,7 +94,7 @@
                             <li class="{% if request.resolver_match.url_name == "admin:index" %}active{% endif %}"><a
                                     href="{% url 'admin:index' %}">Admin</a></li>
                         {% endif %}
-                        {% if request.user.email_verified %}
+                        {% if request.user.email_verified and request.user.has_usable_password %}
                             {% if request.user.is_organizer %}
                                 <li class="{% if 'stats' in request.build_absolute_uri %}active{% endif %}"><a
                                         href="{% url 'app_stats' %}">Stats</a></li>
