Add minor string improvements

--- a/app/templates/mails/include/closing.html
+++ b/app/templates/mails/include/closing.html
@@ -1,5 +1,5 @@
 <p>
-    Have any other question? Email us at {{ h_contact_email|urlize }}
+    Have any other questions? Email us at {{ h_contact_email|urlize }}
     {% if h_fb or h_tw %}
         or message us on
         {% if h_fb %}
