--- a/applications/templates/application.html
+++ b/applications/templates/application.html
@@ -14,10 +14,10 @@
     {% endif %}
 
     {% if application.can_be_edit %}
-        <p>You can still edit your application</p>
+        <p>It is still possible to modify your application.</p>
     {% else %}
-        <p>Your application has been reviewed already. Edition has been disabled to make sure all reviewers get the
-            same data. If you would like to change something important email us at {{ h_contact_email|urlize }}</p>
+        <p>Your application has been reviewed already. Editing has been disabled to make sure all reviewers get the
+            same data. If you would like to change something important, please email us at {{ h_contact_email|urlize }}.</p>
     {% endif %}
     {% include 'include/application_form.html' %}
 
