--- a/applications/templates/dashboard.html
+++ b/applications/templates/dashboard.html
@@ -83,7 +83,7 @@
 
         {% elif application.is_invited or application.is_last_reminder %}
             <div class="col-md-12">
-                <div class="alert alert-success ">Congrats! you have been officially invited to {{ h_name }}! Please
+                <div class="alert alert-success ">Congrats! You have been officially invited to {{ h_name }}! Please
                     confirm
                     your attendance as soon as possible.
                 </div>
