--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -152,7 +152,7 @@
         <div class="row">
 
             <div class="col-sm-6">
-                <p>Have a question? We're here for you! {{ h_contact_email | urlize }}</p>
+                <p>Have a question? We're happy to help! {{ h_contact_email | urlize }}</p>
             </div>
             <div class="social-icons col-sm-6 text-right text-center-xs">
                 {% if h_tw %}
