Improve visa form link in emails

--- a/applications/templates/mails/include/visas.html
+++ b/applications/templates/mails/include/visas.html
@@ -1,5 +1,4 @@
 <p>
-    Also please fill out this 
-    <strong><a href="https://docs.google.com/forms/d/e/1FAIpQLSeo4Ilfof9zl0k1327XeX39HmPryC2kEok8JxbZyyr557cOSw/viewform">form</a></strong> 
-    for receiving visa invitation letter:
+    If you need a visa invitation letter, please fill out
+    <strong><a href="{{ h_visa_form }}">this form</a></strong>
 </p>
