--- a/reimbursement/templates/mails/no_reimbursement_message.html
+++ b/reimbursement/templates/mails/no_reimbursement_message.html
@@ -8,10 +8,8 @@
     <p>Please remember to <a href="{{ confirm_url }}">confirm</a> your spot if you will be joining us. If your plans
         have changed, please let us know by cancelling your invite <a href="{{ cancel_url }}">here</a>.
     </p>
-    <p>
-        If you need an invite letter for your visa, answer this email with your full name, university name and passport
-        number,
-        as shown in your passport.
-    </p>
+    {% if visas %}
+        {% include 'mails/include/visas.html' %}
+    {% endif %}
     {% include 'mails/include/closing.html' %}
 {% endblock %}
