--- a/reimbursement/templates/mails/reimbursement_message.html
+++ b/reimbursement/templates/mails/reimbursement_message.html
@@ -8,9 +8,8 @@
 </p>
     {% include 'mails/include/email_button.html' with text='Submit receipt' url=form_url %}
     {% include 'mails/include/confirm_reimbursement.html' %}
-    <p>
-    If you need an invite letter for your visa, answer this email with your full name, university name and passport number,
-    as shown in your passport.
-    </p>
+    {% if visas %}
+        {% include 'mails/include/visas.html' %}
+    {% endif %}
     {% include 'mails/include/closing.html' %}
 {% endblock %}
