--- a/reimbursement/templates/mails/reimbursement_message.html
+++ b/reimbursement/templates/mails/reimbursement_message.html
@@ -8,7 +8,7 @@
 </p>
     {% include 'mails/include/email_button.html' with text='Submit receipt' url=form_url %}
     {% include 'mails/include/confirm_reimbursement.html' %}
-    {% if visas %}
+    {% if app.visas %}
         {% include 'mails/include/visas.html' %}
     {% endif %}
     {% include 'mails/include/closing.html' %}
