--- a/reimbursement/templates/mails/reject_receipt_message.html
+++ b/reimbursement/templates/mails/reject_receipt_message.html
@@ -7,16 +7,13 @@
     <p>The receipt you submitted is invalid.</p>
     <p><b>Comment on receipt submitted: </b>{{ reimb.public_comment }}</p>
 
-    {% include 'mails/include/email_button.html' with text='Submit receipt' url=form_url %}
     <p>
-        Please submit a valid receipt to be reimbursed. I have extended the deadline so you can submit a valid receipt.
+        Please submit a valid receipt to be reimbursed. We have extended the deadline so you can submit a valid receipt.
         You have {{ h_r_days }} more days to submit a valid receipt.
     </p>
+    {% include 'mails/include/email_button.html' with text='Submit receipt' url=form_url %}
     {% include 'mails/include/confirm_reimbursement.html' %}
 
-    <p>Best,</p><br>
-    <p>
-        {{ reimb.reimbursed_by.get_full_name }}<br>
-        Organizer, {{ h_name }}
-    </p>
+    <p>Best,</p>
+    <p>{{ h_name }} Team</p>
 {% endblock %}
