--- a/checkin/templates/checkin/qr.html
+++ b/checkin/templates/checkin/qr.html
@@ -1,16 +1,33 @@
 {% extends "base_tabs.html" %}
 {% load static %}
+
 {% block extra_head %}
-    <script type="text/javascript" src="{% static 'webqr/llqrcode.js' %}"></script>
-    <script type="text/javascript" src="{% static 'webqr/webqr.js' %}"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://rawgit.com/schmich/instascan-builds/master/instascan.min.js"></script>
 {% endblock %}
+
 {% block head_title %}QR scanner {% endblock %}
+
 {% block panel %}
     <h4 class="text-center">{% block panel_title %}QR Reader{% endblock %}</h4>
     <div id="outdiv">
     </div>
-    <canvas style="display: none" id="qr-canvas" width="100%" height="600"></canvas>
+    <video id="preview" width="100%" height="500px"></video>
 
-    <script type="text/javascript">load();</script>
+    <script type="text/javascript">
+        let scanner = new Instascan.Scanner({ video: document.getElementById('preview') });
+        scanner.addListener('scan', function (content) {
+            window.location.replace("/checkin/"+content);
+        });
+        Instascan.Camera.getCameras().then(function (cameras) {
+          if (cameras.length > 0) {
+            scanner.start(cameras[0]);
+          } else {
+            console.error('No cameras found.');
+          }
+        }).catch(function (e) {
+          console.error(e);
+        });
+    </script>
     <div id="error"></div>
 {% endblock %}
