--- a/checkin/templates/checkin/hacker.html
+++ b/checkin/templates/checkin/hacker.html
@@ -26,7 +26,7 @@
             <form action="" method="post">
                 {% csrf_token %}
                 <input type="hidden" name="app_id" value="{{ app.uuid }}"/>
-                <button class="btn btn-success btn-block" name="checkin">Check In</button>
+                <button class="btn btn-success btn-block" name="checkin">{{ check_type }} check in</button>
             </form>
         {% endif %}
     </div>
