Fix email templates

--- a/applications/templates/mails/include/visas.html
+++ b/applications/templates/mails/include/visas.html
@@ -1,4 +1,4 @@
 <p>
     If you need a visa invitation letter, please fill out
-    <strong><a href="{{ h_visa_form }}">this form</a></strong>
+    <strong><a href="{{ h_visa_form }}">this form</a></strong>.
 </p>
