Adapt scanning QR codes for phones

--- a/checkin/templates/checkin/qr.html
+++ b/checkin/templates/checkin/qr.html
@@ -15,13 +15,17 @@
     <video id="preview" width="100%" height="500px"></video>
 
     <script type="text/javascript">
-        let scanner = new Instascan.Scanner({ video: document.getElementById('preview') });
+        let scanner = new Instascan.Scanner({
+          video: document.getElementById('preview'),
+          mirror: false,
+          backgroundScan: false
+        });
         scanner.addListener('scan', function (content) {
             window.location.replace("/checkin/"+content);
         });
         Instascan.Camera.getCameras().then(function (cameras) {
           if (cameras.length > 0) {
-            scanner.start(cameras[0]);
+            scanner.start(cameras[cameras.length - 1]);
           } else {
             console.error('No cameras found.');
           }
