Denote self-identification 'Other' by 'X', not 'O'

--- a/applications/templates/include/application_form.html
+++ b/applications/templates/include/application_form.html
@@ -62,7 +62,7 @@
             var other_gender = $('#id_other_gender');
             var gender = $('#id_gender');
             conditional_field(other_gender, gender, () => {
-              return gender.val() === 'O';
+              return gender.val() === 'X';
             })
 
             var other_diet = $('#id_other_diet');
