--- a/organizers/templates/applications_list.html
+++ b/organizers/templates/applications_list.html
@@ -7,6 +7,9 @@
         <div class="panel-footer">
             <a href="{% querystring '_export'='csv' %}" class="btn-block btn btn-info">Export
                 CSV</a>
+
+            <a href="{% url 'recalc_votes' %}" class="btn-block btn btn-default">Recalculate
+                votes</a>
         </div>
     {% endif %}
 {% endblock %}
