Adding DubiousListView class to views

--- a/organizers/templates/invite_list.html
+++ b/organizers/templates/invite_list.html
@@ -13,7 +13,7 @@
         </button>
         {% if teams %}
             <a href="{% url 'invite_list' %}" class="btn btn-default btn-block">View applications</a>
-        {% elif h_team_enabled %}
+        {% elif h_team_enabled %}s
             <a href="{% url 'invite_teams_list' %}" class="btn btn-default btn-block">Group by teams</a>
         {% endif %}
 
