--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -26,6 +26,11 @@ body {
 
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
   margin-top: 0;
+  color: black;
+}
+
+p, .p {
+    color: black;
 }
 
 a {
