--- a/app/templates/mails/include/email_button.html
+++ b/app/templates/mails/include/email_button.html
@@ -11,7 +11,7 @@
                 <tr>
                     <td style="font-family:sans-serif;font-size:14px;vertical-align:top;background-color:#ffffff;border-radius:5px;text-align:center; margin: 0 auto;background-color:#E22B57;">
                         <a href="{{ url }}" target="_blank"
-                           style="text-decoration:underline;background-color:#ffffff;border:solid 1px #E22B57;border-radius:5px;box-sizing:border-box;color:#E22B57;cursor:pointer;display:inline-block;font-size:14px;font-weight:bold;margin:0;padding:12px 25px;text-decoration:none;text-transform:capitalize;background-color:#E22B57;border-color:#E22B57;color:#ffffff;">
+                           style="text-decoration:underline;background-color:#ffffff;border:solid 1px #B4C959;border-radius:5px;box-sizing:border-box;color:#E22B57;cursor:pointer;display:inline-block;font-size:14px;font-weight:bold;margin:0;padding:12px 25px;text-decoration:none;text-transform:capitalize;background-color:#E22B57;border-color:#E22B57;color:#ffffff;">
                             {{ text }}
                         </a>
                     </td>
