More color fixes on mail.

--- a/app/templates/base_email.html
+++ b/app/templates/base_email.html
@@ -17,7 +17,7 @@
 	}
 
 	a:hover, a:active, a:focus {
-	    color: #aa002d;
+	    color: hsl(71, 38%, 48%);
 	    text-decoration: none;
 	}
 
@@ -103,12 +103,12 @@
             }
 
             .btn-primary table td:hover {
-                background-color: #aa002d !important;
+                background-color: hsl(71, 38%, 48%) !important;
             }
 
             .btn-primary a:hover {
-                background-color: #aa002d !important;
-                border-color: #aa002d !important;
+                background-color: hsl(71, 38%, 48%) !important;
+                border-color: hsl(71, 38%, 48%) !important;
             }
         }
     </style>
