clean a bit dubious application interface

--- a/app/templates/base_table.html
+++ b/app/templates/base_table.html
@@ -7,7 +7,7 @@
 
     {% if filter %}
         <style>
-            #id_status > div {
+            #id_status > div, #id_contacted > div {
                 display: inline-block;
                 padding-right: 20px;
                 margin-bottom: 0;
