--- a/applications/templates/dashboard.html
+++ b/applications/templates/dashboard.html
@@ -110,6 +110,12 @@
                 <div class="col-md-offset-2 col-md-5 no-padding"><a href="{% url 'cancel_app' application.uuid_str %}"
                                                     class="btn  btn-danger btn-block">Cancel</a></div>
             </div>
+        {% elif application.is_invalid %}
+             <div class="col-md-12">
+                {% include 'include/status.html' %}
+                <p>Application has been marked as invalid. Please reach out to us at {{ h_contact_email|urlize }}
+                    if you think this is a mistake</p>
+            </div>
         {% else %}
             <div class="col-md-12">
                 {% include 'include/status.html' %}
