fix issue with buttons being the same color everywhere

--- a/applications/templates/dashboard.html
+++ b/applications/templates/dashboard.html
@@ -122,7 +122,7 @@
                 <p> When decisions are released, you'll be able to see your results on this page.</p>
                 <p>If you have any questions or concerns, you can still reach us at {{ h_contact_email|urlize }}</p>
                  <div class="col-md-5 no-padding">
-                    <a href="{% url 'application' %}" class="btn  btn-success btn-block">
+                    <a href="{% url 'application' %}" class="btn  btn-primary btn-block">
                         View{% if application.can_be_edit %}/Edit{% endif %} application
                     </a>
                 </div>
