--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -68,40 +68,14 @@ a:hover, a:active, a:focus {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
 }
 
-.btn {
+.btn-primary {
     background: #B4C959;
-    color: white;
-    -webkit-border-radius: 0;
-    -moz-border-radius: 0;
-    border-radius: 0;
-    border: 0;
-    border-radius: 4px;
-    /*
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
-    overflow-y: hidden;
-    font-size: 17px;*/
-    -webkit-transition: all .1s linear;
-    -moz-transition: all .1s linear;
-    -o-transition: all .1s linear;
-    transition: all .1s linear;
-    /*padding-left: 20px;
-    padding-right: 20px;*/
+    border-color: #B4C959;
 }
 
-.btn:hover, .btn:active, .btn:focus {
-    background: #B4C959 !important;
-    color: white;
-}
-
-.btn-reverse {
-    background: #5F723F;
-    color: white;
-}
-
-.btn-reverse:hover, .btn-reverse:active, .btn-reverse:focus {
-    background: #5F723F !important;
-    color: white;
-
+.btn-primary:hover, .btn-primary:active, .btn-primary:focus {
+    background: #a3b857 !important;
+    border-color: #9cb156;
 }
 
 footer p, footer small {
@@ -152,10 +126,6 @@ div.panel-body form {
     padding: 0 !important;
 }
 
-div.panel form {
-    padding: 0 2em 2em 2em;
-}
-
 .confirm-content {
     margin-top: 70px
 }
@@ -189,9 +159,7 @@ img.icon {
     width: 70px;
 }
 
-.btn-block {
-    margin-top: 5px;
-}
+
 
 .col-centered {
     width: 380px;
@@ -276,7 +244,7 @@ img {
         /* Margin bottom by footer height */
         margin-bottom: 145px;
     }
-    
+
     .content {
         margin-bottom: 16em !important;
     }
